--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ node_js:
 before_script:
   - npm install -g gulp
   - npm install -g bower
+  - npm install -g codecov
   - npm install
   - bower install
 script: gulp test
 after_success:
+  - istanbul cover jasmine-node --captureExceptions spec/ \ && /node_modules/.bin/codecov
   - gulp build
   - surge --project ./dist --domain ngekcv.surge.sh
