--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - bower install
 script: gulp test
 after_success:
-  - istanbul cover jasmine-node --captureExceptions spec/ \ && /node_modules/.bin/codecov
+  # - istanbul cover jasmine-node --captureExceptions spec/ \ && /node_modules/.bin/codecov
   - gulp build
   - surge --project ./dist --domain ngekcv.surge.sh
