--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "angular-mocks": "~1.4.2"
   },
   "resolutions": {
-    "angular": "~1.4.2"
+    "angular": ">=1.3.0",
+    "angular-mocks": "^1.5.5"
   }
 }
